[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lifelike-gds"
version = "0.2.0"
description = "Graph analysis tools focused on Neo4j and Reactome"
authors = [
    {name = "Robin", email = "robincai92130@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "neo4j>=6.1.0",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "simplejson>=3.20.2",
    "xlsxwriter>=3.2.9",
    "openpyxl>=3.1.5",
    "pytest>=9.0.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
